--- a/AdventOfCode.Utilities.Tests/AdventOfCode.Utilities.Tests.csproj
+++ b/AdventOfCode.Utilities.Tests/AdventOfCode.Utilities.Tests.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UseVSTest>true</UseVSTest>
+    <RootNamespace>AdventOfCode2024.Utilities.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
